# vuln-web-app2

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/specs/: app-foundation-plan.md  app-foundation.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: auth.py
backend/app/core/: security.py
backend/app/db/: session.py
backend/app/services/: auth_service.py
frontend/static/css/: styles.css
frontend/templates/: dashboard.html  login.html  signup.html
