[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulnerable-app-backend"
version = "1.0.0"
description = "Intentionally vulnerable FastAPI/SQLite security-education lab (backend package)"
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
